tests/snapshots/contract_snapshots__activate_success.snap
---
source: tests/contract_snapshots.rs
expression: json
---
{
  "ok": true,
  "command": "activate",
  "version": "[VERSION]",
  "contract_version": 1,
  "data": {
    "workflow_id": "wf-1",
    "active": true,
    "webhooks": []
  }
}
