tests/snapshots/contract_snapshots__archive_no_session.snap
---
source: tests/contract_snapshots.rs
expression: json
---
{
  "error": {
    "kind": "auth",
    "message": "[ERROR_MSG]",
    "hint": "Run `n8nc auth session add mock --cookie <n8n-auth=...> --browser-id <browser-id>` or set N8NC_SESSION_COOKIE_MOCK and N8NC_BROWSER_ID_MOCK."
  }
}
