tests/snapshots/contract_snapshots__deactivate_success.snap
---
source: tests/contract_snapshots.rs
expression: json
---
{
  "ok": true,
  "command": "deactivate",
  "version": "[VERSION]",
  "contract_version": 1,
  "data": {
    "workflow_id": "wf-1",
    "active": false,
    "webhooks": []
  }
}
