tests/snapshots/contract_snapshots__diff_not_found.snap
---
source: tests/contract_snapshots.rs
expression: json
---
{
  "error": {
    "kind": "not_found",
    "message": "[MESSAGE]"
  }
}
