tests/snapshots/contract_snapshots__fmt_check_failure.snap
---
source: tests/contract_snapshots.rs
expression: json
---
{
  "ok": false,
  "command": "fmt",
  "version": "[VERSION]",
  "contract_version": 1,
  "error": {
    "code": "validation.failed",
    "message": "[ERROR_MSG]"
  }
}
