tests/snapshots/contract_snapshots__fmt_success.snap
---
source: tests/contract_snapshots.rs
expression: json
---
{
  "ok": true,
  "command": "fmt",
  "version": "[VERSION]",
  "contract_version": 1,
  "data": {
    "changed": [
      "[PATH]"
    ]
  }
}
