tests/snapshots/contract_snapshots__get_not_found.snap
---
source: tests/contract_snapshots.rs
expression: json
---
{
  "ok": false,
  "command": "get",
  "version": "[VERSION]",
  "contract_version": 1,
  "error": {
    "code": "resource.not_found",
    "message": "[ERROR_MSG]"
  }
}
